# toy_compiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  codegen.cpp  codegen.h  main.cpp
include/: ast.h  codegen.h  common.h  lexer.h  parser.h  tokenDefs.h  token_buff.h  tokens.h  utils.h
src/: codegen.cpp  lexer.cpp  main.cpp  parser.cpp  token_buff.cpp  tokens.cpp  utils.cpp
test/: test_src.txt
